--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -619,10 +619,6 @@ p {
   padding-right: 145px;
 }
 
-.contact-body {
-  margin-bottom: 40px;
-}
-
 .card-contact {
   width: 355px;
   padding: 33px 40px;
@@ -631,14 +627,14 @@ p {
 .card-contact i {
   font-size: 50px;
   color: #b5b5b5;
-  width: 40%;
+  width: 30%;
 }
 
-.card-contact:not(:last-child) {
-  margin-bottom: 45px;
+.card-contact:not(:nth-child(3)) {
+  margin-bottom: 55px;
 }
 
-.card-contact h5 {
+.card-contact h1 {
   color: #535f63;
   font-family: "Montserrat", sans-serif;
 }
@@ -650,19 +646,14 @@ p {
 }
 
 .input-control-contact {
-  padding: 3px 12px;
+  padding: 3px 3px 3px 12px;
   outline: none;
   border: 2px solid #b5b5b5;
-  margin-bottom: 17px;
 }
 
 .input-control-contact::placeholder {
   font-family: "Roboto", serif;
   color: #b5b5b5;
-}
-
-.input-group-contact input {
-  width: 48%;
 }
 
 .btn-submit-contact {
@@ -674,6 +665,14 @@ p {
 
 .btn-submit-contact:hover{
   opacity: 0.7;
+}
+
+.input-control-contact.error.fail-alert{
+  border: 1px solid red;
+}
+
+label.error.fail-alert{
+  color: red;
 }
 
 /* Service Page */
@@ -1189,10 +1188,6 @@ footer .media-social-icon i {
 
   .contact-title-wrapper {
     padding-right: 0px;
-  }
-
-  .contact-body {
-    flex-direction: column;
   }
 
   .card-contact:not(:last-child) {
